src/objects/CSPOFA__Orchestrator_Constants__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CSPOFA__Automatically_Create_New_Process_Steps__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Automatically Create New Process Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Callout_Instruction_Query_Rows_Factor__c</fullName>
        <defaultValue>10</defaultValue>
        <description>The number of query rows required to process each callout instruction (defaults to 10)</description>
        <label>Callout Instruction Query Rows Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Create_Case_Trigger_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If active, cases will be created by the built-in trigger. Deactivate to override standard case creation behaviour.</description>
        <inlineHelpText>If active, cases will be created by the built-in trigger. Deactivate to override standard case creation behaviour.</inlineHelpText>
        <label>Create Case Trigger Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Create_Task_Trigger_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If active, tasks will be created by the built-in trigger. Deactivate to override standard task creation behaviour.</description>
        <inlineHelpText>If active, tasks will be created by the built-in trigger. Deactivate to override standard task creation behaviour.</inlineHelpText>
        <label>Create Task Trigger Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Custom_Steps_Per_Batch__c</fullName>
        <defaultValue>10</defaultValue>
        <description>The number of custom steps processed in each batch (when BatchApex is used) and each scheduled Engine invocation (when ScheduledApex is used).</description>
        <inlineHelpText>The number of custom steps processed in each batch (when BatchApex is used) and each scheduled Engine invocation (when ScheduledApex is used).</inlineHelpText>
        <label>Custom Steps Per Batch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Default_queue_run_frequency__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Min. value: 1 (the engine is scheduled to run every minute)
Max. value: 525 599 (the engine is scheduled to run just below every year; 60*24*365 - 1 = 525 599 minutes)</description>
        <inlineHelpText>Min. value: 1 (the engine is scheduled to run every minute)
Max. value: 525 599 (the engine is scheduled to run just below every year; 60*24*365 - 1 = 525 599 minutes)</inlineHelpText>
        <label>Default queue run frequency (mins)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Email_Template_Folder__c</fullName>
        <description>Unique name of the email template folder used for email template selection. If no value is provided, all email templates will be available for selection.</description>
        <inlineHelpText>Unique name of the email template folder used for email template selection.</inlineHelpText>
        <label>Email Template Folder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Enable_Case_Creation_For_Jeopardy_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Case Creation For  Jeopardy Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Enable_Debug_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable &apos;Debug&apos; level logging messages</description>
        <label>Enable Debug Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Enable_Info_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable &apos;Info&apos; level logging messages</description>
        <label>Enable Info Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Enable_Notifications__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable Orchestrator notifications.</description>
        <inlineHelpText>Email is sent for Cases and Tasks created by respective steps.
Process notifications for jeopardy, completion and milestone events are posted to process feed.</inlineHelpText>
        <label>Enable Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Enable_Warning_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable &apos;Warning&apos; level logging messages</description>
        <label>Enable Warning Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSPOFA__External_Polling_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Polling Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSPOFA__History_Trigger_On__c</fullName>
        <defaultValue>false</defaultValue>
        <label>History Trigger Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Jeopardy_Queue_Name__c</fullName>
        <label>Jeopardy Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSPOFA__OLA_Time_Unit__c</fullName>
        <defaultValue>&apos;minute&apos;</defaultValue>
        <description>Value should be one of the following: &apos;minute&apos;, &apos;hour&apos;, &apos;day&apos;.</description>
        <inlineHelpText>Value should be one of the following: &apos;minute&apos;, &apos;hour&apos;, &apos;day&apos;.</inlineHelpText>
        <label>OLA Time Unit</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CSPOFA__Process_Trigger_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Process Trigger Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Processing__c</fullName>
        <defaultValue>&apos;BatchApex&apos;</defaultValue>
        <description>Engine processing configuration.
Valid values are:
BatchApex
ScheduledApex</description>
        <inlineHelpText>Engine processing configuration.
Valid values are:
BatchApex
ScheduledApex</inlineHelpText>
        <label>Processing</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Require_Close_Reason_To_Close_A_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requires the Orchestrator Step Close Reason to have a value when closing a case, if the case is linked to an Orchestrator step</description>
        <inlineHelpText>Requires the Orchestrator Step Close Reason to have a value when closing a case, if the case is linked to an Orchestrator step</inlineHelpText>
        <label>Require Close Reason To Close A Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Send_Email_Trigger_On__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If active, emails will be sent by the built-in trigger. Deactivate to override standard email sending behaviour.</description>
        <inlineHelpText>If active, emails will be sent by the built-in trigger. Deactivate to override standard email sending behaviour.</inlineHelpText>
        <label>Send Email Trigger Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Wait_For_External_Email_Feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wait For External Email Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Work_Day_End_Hour__c</fullName>
        <label>Work Day End Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_OrchestrateOrder__c</fullName>
        <description>Holds the name of the Orchestrator Process Template that should be used for top level Order process</description>
        <inlineHelpText>Holds the name of the Orchestrator Process Template that should be used for top level Order process</inlineHelpText>
        <label>Orchestrate Order Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Orchestrator Constants</label>
</CustomObject>